# gpu-gems

./: .gitignore  CMakeLists.txt  build.zig  flake.nix
src/: main.cpp  main.zig  shader.cpp  shader.h  watcher.cpp  watcher.h
src/shaders/: quad.frag  quad.geom  quad.vert  triangle.frag  triangle.vert
